clusters/agora-rke2/traefik-system/ingress.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: 192.168.88.253
    ports:
      - port: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 8006
      targetPort: 8006
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-ingress
  namespace: traefik-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`pve.local.bnbdevelopment.hu`) && PathPrefix(`/`)"
      services:
        - name: proxmox-external
          port: 8006
          scheme: https
  tls:
    secretName: local-bnbdevelopment-hu-tls
---
apiVersion: v1
kind: Endpoints
metadata:
  name: portainer-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: 192.168.88.45
    ports:
      - port: 9443
---
apiVersion: v1
kind: Service
metadata:
  name: portainer-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 9443
      targetPort: 9443
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-ingress
  namespace: traefik-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`portainer.local.bnbdevelopment.hu`) && PathPrefix(`/`)"
      services:
        - name: portainer-external
          port: 9443
          scheme: https
  tls:
    secretName: local-bnbdevelopment-hu-tls
---
apiVersion: v1
kind: Endpoints
metadata:
  name: checkmk-external
  namespace: traefik-system
subsets:
  - addresses:
      - ip: 192.168.88.46
    ports:
      - port: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: checkmk-external
  namespace: traefik-system
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: checkmk-ingress
  namespace: traefik-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`checkmk.local.bnbdevelopment.hu`) && PathPrefix(`/`)"
      services:
        - name: checkmk-external
          port: 5000
          scheme: https
  tls:
    secretName: local-bnbdevelopment-hu-tls
